<resources>
    <string name="app_name">F!nder</string>

    <string name="ok">네</string>
    <string name="no">아니요</string>
    <string name="cancel">취소</string>
    <string name="password">비밀번호</string>
    <string name="account">계정</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="sign_up">회원가입</string>
    <string name="next">다음</string>
    <string name="nick_name">닉네임</string>
    <string name="confirm">확인</string>
    <string name="home">홈</string>
    <string name="debate">토론</string>
    <string name="community">커뮤니티</string>
    <string name="save">저장</string>
    <string name="my">마이</string>
    <string name="fastest">최신순</string>
    <string name="most_comments">댓글순</string>
    <string name="complete">완료</string>
    <string name="write">글쓰기</string>
    <string name="debate_create">토론 생성</string>
    <string name="select_target_mbti">대상 MBTI 선택</string>
    <string name="curious">궁금</string>
    <string name="note_box">쪽지함</string>
    <string name="send_a_note">쪽지 보내기</string>
    <string name="re_comment_put_on">대댓글 달기</string>
    <string name="report">신고</string>
    <string name="comment_modify">댓글 수정</string>
    <string name="re_comment_modify">대댓글 수정</string>
    <string name="change">변경</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="close">닫기</string>
    <string name="my_write_content">작성 글</string>
    <string name="my_write_comment">댓글 단 글</string>
    <string name="search">검색</string>

    <string name="sign_up_complete">회원가입 완료</string>
    <string name="send_code_number">코드번호 발송</string>
    <string name="check_code_number">코드번호 확인</string>
    <string name="nickname_duplication">닉네임 중복 확인</string>
    <string name="authentication_request">인증요청</string>
    <string name="authentication_check">인증확인</string>
    <string name="code_number">코드번호</string>
    <string name="overlap_check">중복확인</string>
    <string name="select_mbti">MBTI 선택</string>
    <string name="do_start">시작하기</string>
    <string name="login_by_email">이메일로 로그인</string>
    <string name="email_id">아이디(이메일)</string>
    <string name="modify_privacy">개인정보 수정</string>
    <string name="success_modify_privacy">개인정보 수정 완료</string>
    <string name="success_nickname_check">닉네임 중복 확인</string>
    <string name="failed_modify_privacy">개인정보 수정 실패</string>
    <string name="alarm_reception">알람 수신</string>
    <string name="all_alarm_and_reception">모든 수신/알림</string>
    <string name="remaining_time">남은 시간</string>
    <string name="login_maintain_check">로그인 상태 유지</string>
    <string name="password_help">영문, 숫자 포함 8~16자</string>
    <string name="email_start_under_bar"><u>이메일로 시작하기</u></string>
    <string name="success_write">글쓰기 성공</string>
    <string name="success_create_debate">토론 생성 성공</string>
    <string name="success_modify">수정 성공</string>
    <string name="user_report_complete">해당 사용자 신고 완료</string>
    <string name="user_block_complete">해당 사용자 차단 완료</string>
    <string name="user_report_failed">해당 사용자 신고 실패</string>
    <string name="user_block_failed">해당 사용자 차단 실패</string>
    <string name="delete_all_note_complete">쪽지 전체 삭제 완료</string>
    <string name="delete_all_note_failed">쪽지 전체 삭제 실패</string>
    <string name="move_to_debate_create">토론 만들러 가기</string>
    <string name="move_to_leave_a_comment">의견 남기러 가기</string>
    <string name="complete_debate">아쉽게 마감된 토론</string>
    <string name="proceeding_debate">불나게 진행중인 토론</string>
    <string name="terms_of_use">이용약관</string>
    <string name="terms_of_use_service">서비스 이용약관</string>
    <string name="deletion">탈퇴</string>
    <string name="account_deletion">탈퇴하기</string>
    <string name="app_version">앱 버전</string>
    <string name="setting">설정</string>
    <string name="delete_all">전체삭제</string>
    <string name="block">차단</string>
    <string name="current_search_word">최근 검색어</string>

    <string name="success_delete_user">계정탈퇴 완료</string>
    <string name="success_send_note">쪽지 전송 완료</string>

    <string name="likeCountFormat">추천 %s</string>
    <string name="commentCountFormat">댓글 %s</string>
    <string name="join_count_format">%s명 참여</string>
    <string name="app_version_format">앱 버전 %s</string>
    <string name="count_format">%s건</string>

    <string name="question_delete_content">글을 삭제하시겠습니까?</string>
    <string name="question_delete_comment">댓글을 삭제하시겠습니까?</string>
    <string name="question_user_report">해당 사용자를 신고하시겠습니까?</string>
    <string name="question_user_block">해당 사용자를 차단하시겠습니까?</string>
    <string name="question_logout">로그아웃 하시겠습니까?</string>
    <string name="question_delete_user">정말로 탈퇴하시겠습니까?</string>
    <string name="question_delete_all_note">해당 쪽지를 전체 삭제하시겠습니까?</string>

    <string name="hint_input_email">이메일을 입력해주세요</string>
    <string name="hint_input_code_number">코드번호를 입력하세요</string>
    <string name="hint_input_password">비밀번호를 입력해주세요</string>
    <string name="hint_re_input_password">비밀번호를 다시 입력해주세요</string>
    <string name="hint_MBTI_select">MBTI를 선택해주세요</string>
    <string name="hint_input_nick_name">6자 이내로 적어주세요</string>
    <string name="hint_mbti_search">알고싶은 MBTI가 있나요?</string>
    <string name="hint_input_title">제목을 입력하세요</string>
    <string name="hint_input_debate_title">토론 제목을 입력하세요</string>
    <string name="hint_community_write">내용을 입력하세요.(고민이나 질문을 포함한 글은 상단 궁금 버튼을 눌러주세요)</string>
    <string name="hint_write">내용을 입력하세요.</string>
    <string name="hint_comment_add">따뜻한 댓글을 남겨주세요!</string>
    <string name="hint_option_a">A 선택지를 8자 이내로 입력해주세요</string>
    <string name="hint_option_b">B 선택지를 8자 이내로 입력해주세요</string>

    <string name="msg_one_on_boarding_main">궁금한 MBTI한테\n바로 물어보세요</string>
    <string name="msg_one_on_boarding_sub">오해와 진실! 여기서 다 풀어요</string>
    <string name="msg_two_on_boarding_main">마음 놓고\n토론하세요</string>
    <string name="msg_two_on_boarding_sub">각종 논쟁을 끝내러 오셨군요!</string>
    <string name="msg_three_on_boarding_main">세상에 나쁜\nMBTI는 없다</string>
    <string name="msg_three_on_boarding_sub">과몰입러들끼리 솔직담백한\n얘기들을 나눠보세요</string>

    <string name="msg_welcome_infj">오늘은 하고 싶은 말\n다하고 오셨나요?</string>
    <string name="msg_welcome_intj">어떤 호기심으로\n가득 차셨나요?</string>
    <string name="msg_welcome_isfp">오늘은 어떤 것에\n꽃혀볼까요?</string>
    <string name="msg_welcome_isfj">어떤 독특한 일이\n일어날까요?</string>
    <string name="msg_welcome_intp">어떤 것에 열정을\n불태워볼까요?</string>
    <string name="msg_welcome_istj">오늘도 민첩한\n하루 되세요!</string>
    <string name="msg_welcome_enfj">카리스마 넘치는\n하루 보내세요!</string>
    <string name="msg_welcome_infp">오늘은 집 밖으로\n나가볼까요?</string>
    <string name="msg_welcome_entj">오늘도 쿨한 하루\n보내셨나요?</string>
    <string name="msg_welcome_istp">만능 재주꾼의\n시간이에요!</string>
    <string name="msg_welcome_estj">오늘도 알찬 하루\n보내세요!</string>
    <string name="msg_welcome_esfj">오늘 계획도 완벽 수행각이에요!</string>
    <string name="msg_welcome_estp">스릴 넘치는 하루\n보내세요!</string>
    <string name="msg_welcome_enfp">오늘은 어떤 상상을\n하셨나요?</string>
    <string name="msg_welcome_entp">자신감 충만한\n하루 되세요!</string>
    <string name="msg_welcome_esfp">어떤 재밌는 일이\n기다리고 있을까요?</string>

    <string name="msg_sign_up_induce">아직 F!nder 회원이 아니라면?</string>
    <string name="msg_terms_description">개인정보취급방침 및 서비스 약관에 동의 합니다.</string>
    <string name="msg_complete_sign_up">회원가입을 축하드려요</string>
    <string name="msg_join_debate">토론에 참여해보세요!</string>
    <string name="msg_balance_game_introduce_title">HOT한 밸런스 게임! 당신의 선택은?</string>
    <string name="msg_debate_introduce_title">급상승 중인 파인더들의 수다</string>
    <string name="msg_empty_balance_game_main">아직 생성된 토론이 없습니다!\n첫 토론의 주인공이 돼보세요! GOGO!</string>
    <string name="msg_empty_community">커뮤니티 게시글이 없습니다.</string>
    <string name="msg_empty_note">나눈 쪽지가 없습니다.</string>
    <string name="msg_re_login">앱을 재실행해주세요</string>
    <string name="msg_community_post_empty">커뮤니티 게시글이 없습니다.</string>
    <string name="msg_success_write">글이 등록되었습니다.</string>
    <string name="msg_success_create_debate">토론이 생성되었습니다.</string>
    <string name="msg_like_success">좋아요를 누르셨습니다.</string>
    <string name="msg_save_success">저장하셨습니다.</string>
    <string name="msg_save_delete">저장을 취소하셨습니다.</string>
    <string name="msg_like_delete">좋아요를 해제하셨습니다.</string>
    <string name="msg_max_image_count">3장까지 이미지를 선택할 수 있습니다.</string>
    <string name="msg_comment_add">댓글을 남기셨습니다.</string>
    <string name="msg_delete_content">글을 삭제했습니다.</string>
    <string name="msg_delete_comment">댓글을 삭제했습니다.</string>
    <string name="msg_delete_re_comment">대댓글을 삭제했습니다.</string>
    <string name="msg_report_complete">신고 완료되었습니다.</string>
    <string name="msg_block_complete">차단 완료되었습니다.</string>
    <string name="msg_delete_complete">삭제 완료되었습니다.</string>
    <string name="msg_description_user_report">허위 신고일 경우, 활동이 제한될 수 있으니, 신중히 신고하세요.</string>
    <string name="msg_debate_notice">토론은 일주일간 진행됩니다.\n올리면 수정, 삭제가 안되니 신중하게 적어주세요!</string>
    <string name="password_correspond">비밀번호가 일치합니다.</string>
    <string name="msg_modify">수정되었습니다.</string>
    <string name="msg_delete_user_sub">탈퇴 후 계정 복구는 불가능합니다.</string>
    <string name="msg_success_delete_user">탈퇴가 완료되었습니다.</string>
    <string name="msg_no_save_content">저장된 콘텐츠가 없습니다.</string>
    <string name="msg_message_send">메시지를 전송했습니다.</string>
    <string name="msg_report_sub">신고와 동시에 해당 사용자의\n 쪽지가 차단됩니다.</string>
    <string name="msg_block_sub">쪽지 수발신이 모두 차단되며\n다시 해제할 수 없습니다.</string>
    <string name="msg_delete_all_note_sub">삭제된 쪽지는 복구할 수 없으며, \n대화방에서 자동으로 나가게 됩니다.</string>
    <string name="msg_empty_search_word">최근 검색어가 없습니다.</string>
    <string name="msg_empty_search_result">검색 결과가 없습니다.</string>

    <string name="error_unspecified_message">문제가 발생했습니다.</string>
    <string name="error_login">로그인 실패</string>
    <string name="error_email_check">이메일 확인 실패</string>
    <string name="error_send_auth_code">코드번호 발송 실패</string>
    <string name="error_check_auth_code">코드번호 인증 실패</string>
    <string name="error_code_empty">code를 입력해주세요.</string>
    <string name="error_email_auth">이메일 인증 실패</string>
    <string name="error_password_empty">패스워드를 입력해주세요.</string>
    <string name="error_email_empty">email을 입력해주세요.</string>
    <string name="error_email_check_sub">이메일을 확인해주세요</string>
    <string name="error_password_length_check">비밀번호 오류</string>
    <string name="error_password_length_check_sub">비밀번호는 영문, 숫자 포함\n8~16자로 입력해주세요.</string>
    <string name="error_not_equal_password">비밀번호 확인 실패</string>
    <string name="error_not_equal_password_sub">비밀번호가 비밀번호 확인과 동일한 지 확인해주세요.</string>
    <string name="error_sign_up">회원가입 실패</string>
    <string name="error_write">글쓰기 실패</string>
    <string name="error_load">불러오기 실패</string>
    <string name="error_nickName_duplicate">닉네임 중복</string>
    <string name="error_modify">수정 실패</string>
    <string name="error_community_detail_load">게시글 조회 실패</string>
    <string name="error_community_detail_load_sub">글을 확인할 수 없습니다.</string>
    <string name="error_mbti_empty">mbti가 입력되지 않았습니다</string>
    <string name="error_empty_comment">댓글을 입력해주세요.</string>
    <string name="error_comment_add">댓글을 달 수 없습니다.</string>
    <string name="error_comment_delete">댓글이 삭제되지 않았습니다.</string>
    <string name="error_delete_content_fail">글이 삭제되지 않았습니다.</string>
    <string name="error_create_debate">토론 생성에 실패하셨습니다.</string>
    <string name="error_delete_user">계정탈퇴 실패</string>
    <string name="error_empty_my_comment_content">댓글 단 글이 없습니다.</string>
    <string name="error_empty_my_content">작성글이 없습니다.</string>
    <string name="error_send_note">쪽지 전송 실패</string>
</resources>