<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            layout="@layout/include_sub_tool_bar"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:text="@string/login_by_email"
                android:textSize="18dp"
                android:textColor="@color/black1"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/email_id"
                android:textSize="16dp"
                android:textColor="@color/black1"
                android:textStyle="bold"/>
            
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_main_color_focus_stroke"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:paddingTop="15dp"
                android:paddingBottom="16dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:hint="@string/hint_input_email"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/passwordEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textSize="16dp"
                android:textColor="@color/black1"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_main_color_focus_stroke"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="15dp"
                android:paddingBottom="16dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:hint="@string/hint_input_password"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/autoLoginCheckLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/autoLoginCheckButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_on_button"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center"
                    android:text="@string/login_maintain_check"
                    android:textSize="14dp"
                    android:textColor="@color/darkSlateGray"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

<!--        여기는 자취방 돌아가서 컴포넌트 형태로 변경하자-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:background="@color/mainColor"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="16dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/signUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/msg_sign_up_induce"
                    android:textSize="14dp"
                    android:textColor="@color/black3"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/moveToSignUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="14dp"
                    android:textColor="@color/black1"
                    android:textStyle="bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>