<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <include
            android:id="@+id/actionBar"
            layout="@layout/include_sub_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:text="@string/account"
            android:textColor="@color/black1"
            android:textSize="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="33dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/modify_privacy"
                android:textColor="@color/gray2"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/moveToPrivacyModifyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_light_gray_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:text="@string/alarm_reception"
            android:textColor="@color/black1"
            android:textSize="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="33dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/all_alarm_and_reception"
                android:textColor="@color/gray2"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.suke.widget.SwitchButton
                android:id="@+id/alarmReceptionSwitchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:sb_checked_color="@color/mainColor"
                app:sb_show_indicator="false"
                app:sb_uncheck_color="@color/black7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:text="@string/terms_of_use"
            android:textColor="@color/black1"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="33dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/terms_of_use_service"
            android:textColor="@color/gray2"
            android:textSize="14dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/account_deletion"
            android:textColor="@color/gray2"
            android:textSize="14dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_gray_dot"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/app_version"
                android:textColor="@color/gray2"
                android:textSize="14dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>