<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            layout="@layout/include_sub_tool_bar"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sign_up_one_step"
            android:layout_marginTop="23dp"
            android:layout_gravity="center"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="26dp"
                android:paddingTop="36dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_id"
                    android:textSize="16dp"
                    android:textColor="@color/black1"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/emailEditTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:fontFamily="@font/noto_sans_kr_regular"
                        android:includeFontPadding="false"
                        android:textColor="@color/black1"
                        android:background="@drawable/bg_main_color_focus_stroke"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:paddingTop="15dp"
                        android:paddingBottom="16dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_marginRight="12dp"
                        android:hint="@string/hint_input_email"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/authenticationRequestButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/mainColor"
                        android:lines="1"
                        android:text="@string/authentication_request"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="16dp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/codeNumberLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/code_number"
                        android:textSize="16dp"
                        android:textColor="@color/black1"
                        android:textStyle="bold"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/codeNumberEditTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="text"
                            android:textSize="16dp"
                            android:textColor="@color/black1"
                            android:fontFamily="@font/noto_sans_kr_regular"
                            android:includeFontPadding="false"
                            android:background="@drawable/bg_main_color_focus_stroke"
                            android:paddingTop="15dp"
                            android:paddingBottom="16dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:layout_marginRight="12dp"
                            android:hint="@string/hint_input_code_number"/>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/authenticationCheckButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/mainColor"
                            android:text="@string/authentication_check"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="16dp"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="16dp"
                    android:textColor="@color/black1"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordEditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_main_color_focus_stroke"
                    android:lines="1"
                    android:inputType="textPassword"
                    android:textSize="16dp"
                    android:textColor="@color/black1"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:includeFontPadding="false"
                    android:paddingTop="15dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/hint_input_password"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/password_help"
                    android:textSize="12dp"
                    android:textColor="@color/black04"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordConfirmEditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_main_color_focus_stroke"
                    android:lines="1"
                    android:inputType="textPassword"
                    android:textSize="16dp"
                    android:textColor="@color/black1"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:includeFontPadding="false"
                    android:paddingTop="15dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/hint_re_input_password"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/passwordCorrespondView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone"
                    android:text="@string/password_correspond"
                    android:textSize="12dp"
                    android:textColor="@color/main_color_2"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_select_button"
            android:stateListAnimator="@null"
            android:enabled="false"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="16dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>